tests/multi_return_return_arity_bad.stderr
tests/multi_return_return_arity_bad.hop:3:2: error: HOP2005: call arity mismatch
